2010-04-07  Brian Gough  <bjg@network-theory.co.uk>

	* prop_source.c (FUNCTION): added a function to test if two
        matrices are equal

2009-07-09  Brian Gough  <bjg@network-theory.co.uk>

	* init_source.c (FUNCTION): handle NULL argument in free

2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* matrix.c: compile all the inline matrix functions from header

	* gsl_matrix.h and all related files: use new inline declarations

	* Makefile.am (INCLUDES): use top_srcdir, remove top_builddir
	(noinst_HEADERS): remove matrix_source.c

2007-08-21  Brian Gough  <bjg@network-theory.co.uk>

	* prop_source.c (FUNCTION): added gsl_matrix_isnonneg

2007-02-17  Brian Gough  <bjg@network-theory.co.uk>

	* test_source.c (FUNCTION): avoid running negative value tests on
	char, because it can be unsigned.

2007-01-26  Brian Gough  <bjg@network-theory.co.uk>

	* minmax_source.c: added support for NaNs

2006-10-31  Brian Gough  <bjg@network-theory.co.uk>

	* prop_source.c (FUNCTION): added functions gsl_matrix_ispos,
	gsl_matrix_isneg

2003-01-01  Brian Gough  <brian.gough@network-theory.co.uk>

	* gsl_matrix_complex_float.h (gsl_matrix_complex_float_get):
	removed const from zero

	* matrix_source.c (FUNCTION): removed const from zero

2002-11-24  Brian Gough  <bjg@network-theory.co.uk>

	* Makefile.am: added libgslsys.a to link, to provide gsl_hypot for
	complex division

Mon Jun 17 22:31:33 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test_complex_source.c (FUNCTION): fixed non-constant initializer

Wed May  1 21:33:44 2002  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_matrix_complex_float.h (gsl_matrix_complex_float_get): moved
 	constant zero inside GSL_RANGE_CHECK_OFF

Sun Mar 24 20:28:48 2002  Brian Gough  <bjg@network-theory.co.uk>

	* oper_complex_source.c: complex matrix operations (from Toby
 	White)
	
Mon Feb 18 20:33:58 2002  Brian Gough  <bjg@network-theory.co.uk>

	* copy_source.c (gsl_matrix_swap): fixed prototype by removing