@@ -1,3 +1,9 @@
+2011-10-16  Rhys Ulerich  <rhys.ulerich@gmail.com>
+
+	* test_source.c:         added binary_noncontiguous test template
+	* test_complex_source.c: added binary_noncontiguous test template
+	* test.c:                now running binary_noncontiguous
+
 2010-04-07  Brian Gough  <bjg@network-theory.co.uk>
 
 	* prop_source.c (FUNCTION): added a function to test if two
